# FastApi_new

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  API_GUIDE.md  ARCHITECTURE.md  CENTRALIZED_ERROR_HANDLING.md  DEPLOYMENT.md  Dockerfile  Makefile  PERFORMANCE.md  README.md  TESTING.md  alembic.ini  cleanup.py  dev.py  docker-compose.monitoring.yml  generate_jwt_keys.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  test_and_clean.py  test_db.py
.github/workflows/: ci-cd.yml
app/: config.py  data.py  database.py  dependencies.py  exceptions.py  logging_config.py  main.py  models.py  project_info.py  security.py  seed_data.py
app/alembic/: env.py  script.py.mako
app/alembic/versions/: 0466e06c146c_user_code_added_in_api_log.py  23a50f1a6d19_out_of_stock_added.py  4149ba8021d3_quantity_added_in_cart.py  50f977d71418_otp_added_in_order.py  (+8 more)
app/core/: error_handler.py  logger.py
app/libs/: email_template.py  emails.py  template_manager.py  utils.py
app/middleware/: error_logging.py  rate_limit.py
app/routers/: health.py
monitoring/: prometheus.yml
scripts/: dev.py
tests/: conftest.py  pytest.ini  test_basic.py  test_config.py  test_health.py  test_runner.py
tests/e2e/: test_basic_workflow.py  test_cities_workflow.py  test_complete_workflow.py  test_countries_workflow.py  test_states_workflow.py
tests/fixtures/: test_data.py
tests/integration/: test_auth_api.py  test_cities_api.py  test_countries_api.py  test_health_api.py  test_states_api.py
tests/unit/: test_email_templates.py  test_models.py  test_security.py  test_utils.py
(+19 files in other folders)
