[tool.poetry]
name = "demo-project"
version = "1.0.0"
description = "Demo Project - FastAPI application template"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.9.2,<4.0"
fastapi = "^0.115.6"
uvicorn = {extras = ["standard"], version = "^0.32.1"}
alembic = "^1.14.0"
sqlalchemy = "^2.0.36"
pymysql = "^1.1.1"
email-validator = "^2.2.0"
phonenumbers = "^8.13.47"
jwcrypto = "^1.5.6"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "^4.2.1"
requests = "^2.32.3"
pydantic = "^2.10.3"
pydantic-settings = "^2.1.0"
cryptography = "^44.0.0"
slowapi = "^0.1.9"

jinja2 = "^3.1.6"
python-dotenv = "^1.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.2"
black = "^23.12.1"
flake8 = "^6.1.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
pytest-cov = "^7.0.0"
pytest-mock = "^3.15.1"
autoflake = "^2.3.1"

[tool.poetry.scripts]
dev = "dev:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | alembic/versions
)/
'''